--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
   "dependencies": {
     "@prisma/client": "^5.21.1",
     "axios": "^1.7.7",
+    "firebase": "^11.0.1",
     "js-cookie": "^3.0.5",
     "next": "15.0.2",
     "react": "19.0.0-rc-02c0e824-20241028",
-    "react-dom": "19.0.0-rc-02c0e824-20241028"
+    "react-dom": "19.0.0-rc-02c0e824-20241028",
+    "uuid": "^11.0.2"
   },
   "devDependencies": {
     "@types/js-cookie": "^3.0.6",
