adiciona padronização na formatação do código

--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
   },
   "lint-staged": {
     "**/*.{js,jsx,ts,tsx}": [
-      "eslint --fix",
-      "prettier --write"
+      "eslint --fix .",
+      "prettier --write ."
     ]
   },
   "dependencies": {
