--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "js-cookie": "^3.0.5",
     "next": "15.0.2",
     "react": "19.0.0-rc-02c0e824-20241028",
+    "react-color": "^2.19.3",
     "react-dom": "19.0.0-rc-02c0e824-20241028",
     "uuid": "^11.0.2"
   },
@@ -33,6 +34,7 @@
     "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
     "@types/react": "^18",
+    "@types/react-color": "^3.0.12",
     "@types/react-dom": "^18",
     "eslint": "^8.57.1",
     "eslint-config-next": "15.0.2",
